--- a/README
+++ b/README
@@ -15,7 +15,8 @@ kindly, let me know if you have any questions @Haitham Jassim
 -- the code has been added to src java dir, because in future there will be a need to write unit test for the my test code then this will
 be become handy
 -- also, there a gradle build script ready, however due to time bandwidth the script will only build the packages by gradle build command. the gradle
-cucumber test runner (gradle cucumber) is implemented but that is not 100% yet.
+cucumber test runner (gradle cucumber) is implemented but that is not 100% yet
+-- for logging I used System.out.println, this could be refactored to use log4j
 -- references for test data used
    --- https://en.wikipedia.org/wiki/Option_(finance)#Option_styles
    --- https://en.wikipedia.org/wiki/ISO_4217#X_currencies
