--- a/README
+++ b/README
@@ -2,7 +2,8 @@ to run the test:-
 - install Maven
 - start the validation service, by running startApplication script
 - run test run-tests script, which will trigger maven clean install then execute cucumber scenarios
-- the final HTML(also other formats are available) test report will be saved in the target directory/output
+- the final HTML(also other formats are available) test report will be saved in the target directory/output which also support junit
+- the tests could be run form IntelliJ as TestNG or Junit on the feature file (right click  on the scenario or feature)
 
 There are 4 main scenarios, the first 3 are based on the test scope and last one is regression for batch validation REST endpoint.
     All tests should pass apart from validating legal entity should be  CS Zurich and American options type check for Exercise Start Date, seems the the service
@@ -15,7 +16,7 @@ kindly, let me know if you have any questions @Haitham Jassim
 -- the code has been added to src java dir, because in future there will be a need to write unit test for the my test code then this will be become handy
 -- java docs have been used to document classes/methods
 -- also, there a gradle build script ready, however due to time bandwidth the script will only build the packages by gradle build command. the gradle
-cucumber test runner (gradle cucumber) is implemented but that is not 100% yet
+cucumber test runner (gradle cucumber) is implemented but that is not 100% yet. All grade build and cucumber settings can be found settings.gradle
 -- for logging I used System.out.println, this could be refactored to use log4j
 -- references for test data used
    --- https://en.wikipedia.org/wiki/Option_(finance)#Option_styles
